Updated Manual Test Groups